@@ -1,4 +1,4 @@
-; @(#)$Ident: dist.ini 2013-12-02 22:00 pjf ;
+; @(#)$Ident: dist.ini 2013-12-06 14:52 pjf ;
 
 name = Yakuake-Sessions
 
@@ -6,7 +6,7 @@ name = Yakuake-Sessions
 perl              = 5.010001
 namespace::sweep  = 0.006
 Class::Usul       = v0.33.0
-File::DataClass   = v0.23.0
+File::DataClass   = v0.27.0
 Moo               = 1.003
 Net::DBus         = v1.0.0
 
@@ -17,8 +17,6 @@ Module::Build     = 0.4004
 [Prereqs / BuildRequires]
 version           = 0.88
 Module::Build     = 0.4004
-
-[Meta::Dynamic::Config]
 
 [MetaNoIndex]
 directory         = examples
